[package]
name = "ruspiro-uart"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.4.0" # remember to update html_root_url
description = """
Simple and convinient access API to the Raspberry Pi 3 UART0 (PL011) and UART1 (miniUART)
peripherals
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-uart/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-uart/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "uart", "baremetal", "raspberrypi"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = [".travis.yml", "Makefile.toml"]

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-uart", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-gpio = "~0.4.3"
ruspiro-register = "~0.5.4"
ruspiro-mmio-register = "~0.1.3"
ruspiro-timer = "~0.5.2"

[features]
ruspiro_pi3 = [
    "ruspiro-gpio/ruspiro_pi3",
    "ruspiro-timer/ruspiro_pi3"
]

[patch.crates-io]
ruspiro-gpio = { git = "https://github.com/RusPiRo/ruspiro-gpio.git", branch = "development" }
ruspiro-register = { git = "https://github.com/RusPiRo/ruspiro-register.git", branch = "development" }
ruspiro-timer = { git = "https://github.com/RusPiRo/ruspiro-timer.git", branch = "development" }
ruspiro-mmio-register = { git = "https://github.com/RusPiRo/ruspiro-mmio-register.git", branch = "development" }
